@@ -43,6 +43,8 @@ namespace Cumberland.Data
 		
 		Rectangle Extents { get; }
 		
+		List<Feature> GetFeatures();
+		
 		List<Feature> GetFeatures(Rectangle rectangle);
 	}
 }
